versioned_docs/version-0.4.0/SEMI/tutorial-05-issue-management/02-issue-create.md
---
sidebar_position: 2
---

import ValidateTextByToken from "/src/utils/getQueryString.js";
import PopUp1 from "./img/010.png";
import PopUp2 from "./img/018.png";
import PopUp3 from "./img/036.png";
import PopUp4 from "./img/038.png";
import PopUp5 from "./img/045.png";
import PopUp6 from "./img/047.png";
import PopUp7 from "./img/048.png";
import PopUp8 from "./img/049.png";
import PopUp9 from "./img/050.png";
import PopUp10 from "./img/051.png";

# 이슈 등록
고객사에서 일어나는 이슈를 등록하고, 유관부서에 이슈의 심의 요청 방법을 안내합니다.
<ValidateTextByToken dispTargetViewer={true} dispCaution={false} validTokenList={['head', 'branch']}>

## 이슈 접수

![006](./img/006.png)
1. **신규 등록** 버튼을 클릭합니다. 
<br/>
<br/>

![007](./img/007.png)
1. 이슈의 기본 정보를 등록합니다. 조치 요청 납기를 제외한 **모든 항목은 필수 입력사항**입니다.
    - **Pjt No.** (WBS No.) 리스트는 아래와 같습니다. 
        <br/>RD25M003 / RD25M002 / RD25M001 / RD24M018 / RD24M017 / RD24M016 / RD24M015 / RD24M014 / RD24M013 / RD24M012 / RD24M011 / RD24M010 / RD24M009 / RD24M008 / RD24M007 / RD24M006 / RD24M005 / RD24M004 / RD24M003 / RD24M002 / RD24M001

    - **이슈 발생 장소** (대분류) 리스트는 아래와 같습니다. 
        <br/>삼성전자(기흥) / 삼성전자(평택) / 본사

    - **이슈 발생 장소** (소분류) 리스트는 아래와 같습니다. 
        <br/>창원 / NRD-K / P3D / 아산 / 판교

    - **모델명**을 검색합니다. 검색 방법은 다음과 같습니다. 
        :::info 모델 검색 방법
        ![046](./img/046.png)
        1. **검색** 버튼을 클릭합니다. 
        <br/>
        <br/>
        <div><img src={PopUp5} width="60%" alt="045"/></div>
        1. **반도체사업부**를 선택합니다. 
        1. 반도체사업부의 **전공정**을 선택합니다.
        1. 해당되는 **모델**을 선택합니다. 
        1. **저장** 버튼을 클릭합니다.  
        <br/>
        <br/>
        <div><img src={PopUp6} width="50%" alt="047"/></div>
        <br/>**등록이 완료**되면 위 그림과 같이 모델명이 표시됩니다. <br/>**수정**이 필요한 경우 **검색** 버튼을 클릭하여 모델명을 **재선택** 합니다.
        :::
    - **설비코드** (고객사) 리스트는 아래와 같습니다. 
        <br/>SHB7701 / SHBD701

    - **공정명** 리스트는 아래와 같습니다. 
        <br/>TSN / Etch / PE TiN / CC TiN / DC TiN / MC TiN / DC Ti / MC Ti / SiO/SiN / Prd Clean / Co Pre-clean / Cobalt / SiN / SiO / Ti/TiN / P-TiN / TiN / Ti
        
    - **발생 구분** 리스트는 아래와 같습니다. 
        <br/>필드이슈 / 셋업이슈 / 생산이슈 / 개발이슈
        
    - **이슈 구분** 리스트는 아래와 같습니다. 
        <br/>풀림 / 유량(헌팅/드롭) / 연결 Miss / Uniformity / Leak / 막힘 / 휴먼에러 / 아킹 / 단선/단락 / 파손 / 온도(헌팅/드롭/발열) / 통신오류 / 눈관리 / 오염 / 막질 / Particle / 표준부재(절차/문서) / 표준미흡(절차/문서) / Software / Hardware
<br/>
<br/>

![008](./img/008.png)
이슈와 관련하여 부적합 발생 부품 정보를 등록 할 수 있습니다. 
1. **부품 코드를 검색**하여 등록합니다. 조회가 불가한 부품은 직접 입력합니다.  
1. **부적합 발생 부품 정보**를 입력합니다. 
1. 부품의 **Serial Number**가 존재한다면 입력합니다. 
1. 해당되는 **Module**을 선택합니다. Module 리스트는 다음과 같습니다. 
    - Sub Module / PM6 / PM5 / PM4 / PM3 / PM2 / PM1 / Platform / System
1. 해당되는 **Unit**을 선택합니다. Unit 리스트는 다음과 같습니다. 
    - Sub component / MPB / Gas Line Unit / Vacuum Unit / Elec. Unit / Source Box Unit / Chamber Unit / Lid Unit / Moving Unit / Frame Unit / TM Chamber Unit / L/L Chamber Unit / EFEM Unit / 공통

<br/>
<br/>

![009](./img/009.png)
1. 관련 **첨부파일**을 등록하기위해 **추가** 버튼을 클릭합니다. 첨부파일 등록 방법은 다음과 같습니다. 
    :::tip 첨부파일 등록 방법
    <div><img src={PopUp7} width="70%" alt="048"/></div>
    첨부할 파일을 Drag하거나 **파일선택**을 클릭하여 추가합니다. 
    <br/>
    <br/>
    <div><img src={PopUp8} width="70%" alt="049"/></div>
    등록된 파일은 그림 오른쪽과 같이 표시되며, 동일한 방식으로 파일을 추가할 수 있습니다. 
    <br/>파일 추가가 완료된 후에는 창을 닫습니다.
    :::
1. 이슈 등록자는 해당 이슈에 대한 **의견**을 상세히 입력합니다. 
1. 이슈 등록 내용을 **임시저장** 할 수 있습니다. 
1. 이슈 등록을 위한 내용 입력이 완료되면 **이슈 등록** 버튼을 클릭합니다. 
<br/>
<br/>
<div><img src={PopUp1} width="80%" alt="010"/></div>

1. **결재 승인자**를 등록합니다. 
    :::tip
    <div><img src={PopUp9} width="20%" alt="050"/></div>
    - 이슈 등록을 위해 결재자 외에 합의가 필요한 경우 **합의**를 클릭하여 해당 임직원을 등록합니다. 
    <div><img src={PopUp10} width="20%" alt="051"/></div>
    - 이슈 등록 내용을 공유하는 목적으로 수신처를 등록해야 하는 경우 **통보**를 클릭하여 해당 임직원을 등록합니다. 
    :::
1. **상신 의견**을 입력합니다. 
1. **확인** 버튼을 클릭하여 이슈 등록에 대한 결재 상신을 완료합니다. 
<br/>
<br/>

## 이슈 등록 중
![012](./img/012.png)
1. 결재가 진행중인 이슈는 관련자들에게 위와같은 **이메일이 발송**됩니다. 결재자는 Circle 알림 외에도 해당 이메일을 통해 등록하고자 하는 이슈의 내용을 확인 할 수 있습니다. 
<br/>
<br/>

![011](./img/011.png)
1. 결재가 진행중인 이슈는 **이슈등록중** 상태로 표시됩니다. 
<br/>
<br/>

## 이슈 등록 완료
<div><img src={PopUp3} width="80%" alt="036"/></div>

1. 이슈 관리자는 상신된 이슈 결재를 확인하고 처리합니다. 
:::info
- 승인 : 문서의 실행을 허락하여 이슈 등록이 완료되고 이슈 심의를 진행 할 수 있는 상태가 됩니다. 
- 반려 : 문서의 실행이 거부되며 기안자에게 반려 사유가 전달됩니다. 
- 보류 : 승인 또는 반려 결정을 내리기 어려운 상황에서 결재를 일시적으로 중단시킬 수 있습니다. 보류 상태인 경우 이슈는 등록 중 상태로 유지됩니다. 
- 전결 : 부득이하게 상위 결재자의 결재를 대신 해야 하는 경우 선택합니다. 
:::
<br/>
<br/>

![013](./img/013.png)
1. 이슈 등록이 완료되면 상태값이 **이슈등록완료**로 표시됩니다. 
1. 이슈 **No. 를 클릭**하여 이슈 상세 내용 확인 및 심의, 대책 수립 등 관리를 수행 할 수 있습니다.
<br/>
<br/>

### 이슈 수정 및 취소
![014](./img/014.png)
이슈 수정 및 취소가 필요한 경우, 상세 화면 하단의 버튼을 클릭하여 진행합니다. 
1. **수정** 버튼을 클릭하여 이슈 수정이 가능합니다. 
    :::info
        이슈 등록 결재가 진행 중인 경우에도 문서 수정이 가능합니다.
    :::
1. **접수 취소**를 할 경우, 접수가 취소되며 되살릴 수 없으니 유의하여 진행하시기 바랍니다. 
<br/>
<br/>

### 이슈 심의 요청
:::info
**주관부서**에서 검토 담당자를 지정하고 검토 의견을 요청하는 부분입니다.
:::
![015](./img/015.png)
등록된 이슈에 대한 심의를 진행하고 조치 담당자를 지정하는 단계입니다. 
1. **이슈심의** 탭을 클릭합니다. 
1. **검토자 추가** 버튼을 클릭하여 이슈를 검토할 검토자를 등록합니다. 
    :::info
    검토자는 **여러명 등록이 가능**합니다.
    :::
<br/>
<br/>

![037](./img/037.png)
1. 검토 의견 요청을 위해 요청할 **검토 담당자를 체크** 합니다. 
1. **의견 요청** 버튼을 클릭합니다. 
    :::info
    <div><img src={PopUp2} width="50%" alt="018"/></div>
    1. 팝업창의 **확인** 버튼을 클릭해야지만 의견요청 이메일이 전송됩니다. 
    <br/>
    <br/>
    <div><img src={PopUp4} width="50%" alt="038"/></div>
    검토 담당자에게 의견 요청 메일이 발송되면 위와같은 토스트 알림을 확인 할 수 있습니다.
    :::
<br/>
<br/>


### 이슈 심의 의견 등록 - 유관부서
:::warning 담당부서
**유관부서**가 이슈에 대한 의견을 등록하는 부분입니다. 
:::
![039](./img/039.png)
1. 유관부서 검토 담당자는 위와같은 **이메일**을 수신받습니다. <br/>**링크를 클릭**하면 이슈 검토 페이지로 연결됩니다. 
<br/>
<br/>

![040](./img/040.png)
1. 검토 담당자가 **의견**을 작성하는 란 입니다.  
1. 검토 담당자가 **중요도**를 입력하는 란 입니다. **중요도** 리스트는 아래와 같습니다. 
   - A / B / C
1. 검토담당자는 해당 이슈의 접수 여부를 **승인**하거나 **Drop**하여야 합니다. 
1. 의견, 중요도 및 접수 여부를 확정한 뒤 **저장** 버튼을 눌러 입력한 사항을 저장합니다.  
<br/>
<br/>

![041](./img/041.png)
1. 등록된 이슈는수정이 불가하며 처리 완료일이 표시됩니다. **보기 버튼**을 클릭하여 의견의 상세 내용을 확인 할 수 있습니다. 
<br/>
<br/>

### 이슈 심의 의견 등록 - 주관부서
:::warning 담당 부서
**주관부서**가 이슈에 대한 최종 의견을 등록하는 부분입니다. 검토 담당자들의 의견을 종합하여 **최종 의견을 등록하고 이슈 심의를 완료** 합니다. 
:::
![019](./img/019.png)
1. 이슈에 대한 종합적인 **중요도**를 선택합니다. **중요도** 리스트는 아래와 같습니다. 
   - A / B / C
1. 이슈가 종전 발생 이력이 있는지 **재발여부**를 선택합니다. 
1. 이슈 **승인** 혹은 **Drop** 여부를 선택합니다. 
1. 이슈에 대한 **종합 의견**을 입력합니다. 
1. **심의 완료** 버튼을 클릭하여 이슈 심의를 완료합니다. 
    <br/>등록 버튼을 클릭한 시점이 **처리 이력에 표시**됩니다. 
<br/>
<br/>

### 이슈 심의 승인
:::tip 이슈 심의 승인
이슈 심의가 승인된 경우 위와같은 담당자에게 **이메일이 전송**됩니다. 
:::
![020](./img/020.png)
<br/>
<br/>

![021](./img/021.png)
이슈 심의가 승인처리되면 목록의 상태 값이 **대책수립중**으로 변경됩니다.<br/>이슈가 **Drop**된 경우, 상태값이 **Drop**으로 표시됩니다.  

</ValidateTextByToken>
